# homework6

./: .gitignore  CMakeLists.txt  execution-result.txt
src/: homework6_files.cpp  homework6_search.cpp
